--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "serve": "serve"
+    "serve": "serve",
+    "lite": "lite-server"
   },
   "dependencies": {
-    "lite-server": "^2.5.4",
+    "lite-server": "^2.6.1",
     "serve": "^14.2.4"
   }
 }
