--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "dependencies": {
     "lite-server": "^2.6.1",
     "serve": "^14.2.4"
+  },
+  "devDependencies": {
+    "esbuild": "^0.25.0",
+    "firebase": "^11.3.0"
   }
 }
